fix(range): vertically align track in the middle

--- a/projects/ngx-uic/range/src/components/range/range.component.scss
+++ b/projects/ngx-uic/range/src/components/range/range.component.scss
@@ -14,6 +14,7 @@ $high: calc(var(--high, 0) * 1%);
     display: flex;
     width: 10rem;
     justify-content: center;
+    align-items: center;
     cursor: pointer;
 }
 
